// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet should be render as element 1`] = `
<div class="fect-snippet default"><span><span>$</span>In Test</span>
  <div class="fect-snippet_copy"><svg viewBox="0 0 24 24" width="22" height="22" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision" style="color: currentcolor;">
      <path d="M8 17.929H6c-1.105 0-2-.912-2-2.036V5.036C4 3.91 4.895 3 6 3h8c1.105 0 2 .911 2 2.036v1.866m-6 .17h8c1.105 0 2 .91 2 2.035v10.857C20 21.09 19.105 22 18 22h-8c-1.105 0-2-.911-2-2.036V9.107c0-1.124.895-2.036 2-2.036z"></path>
    </svg></div>
</div>
`;

exports[`Snippet should support different types 1`] = `
<div class="fect-snippet default"><span><span>$</span>0</span>
  <div class="fect-snippet_copy"><svg viewBox="0 0 24 24" width="22" height="22" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision" style="color: currentcolor;">
      <path d="M8 17.929H6c-1.105 0-2-.912-2-2.036V5.036C4 3.91 4.895 3 6 3h8c1.105 0 2 .911 2 2.036v1.866m-6 .17h8c1.105 0 2 .91 2 2.035v10.857C20 21.09 19.105 22 18 22h-8c-1.105 0-2-.911-2-2.036V9.107c0-1.124.895-2.036 2-2.036z"></path>
    </svg></div>
</div>
<div class="fect-snippet success"><span><span>$</span>1</span>
  <div class="fect-snippet_copy"><svg viewBox="0 0 24 24" width="22" height="22" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision" style="color: currentcolor;">
      <path d="M8 17.929H6c-1.105 0-2-.912-2-2.036V5.036C4 3.91 4.895 3 6 3h8c1.105 0 2 .911 2 2.036v1.866m-6 .17h8c1.105 0 2 .91 2 2.035v10.857C20 21.09 19.105 22 18 22h-8c-1.105 0-2-.911-2-2.036V9.107c0-1.124.895-2.036 2-2.036z"></path>
    </svg></div>
</div>
<div class="fect-snippet warning"><span><span>$</span>2</span>
  <div class="fect-snippet_copy"><svg viewBox="0 0 24 24" width="22" height="22" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision" style="color: currentcolor;">
      <path d="M8 17.929H6c-1.105 0-2-.912-2-2.036V5.036C4 3.91 4.895 3 6 3h8c1.105 0 2 .911 2 2.036v1.866m-6 .17h8c1.105 0 2 .91 2 2.035v10.857C20 21.09 19.105 22 18 22h-8c-1.105 0-2-.911-2-2.036V9.107c0-1.124.895-2.036 2-2.036z"></path>
    </svg></div>
</div>
<div class="fect-snippet error"><span><span>$</span>3</span>
  <div class="fect-snippet_copy"><svg viewBox="0 0 24 24" width="22" height="22" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" fill="none" shapeRendering="geometricPrecision" style="color: currentcolor;">
      <path d="M8 17.929H6c-1.105 0-2-.912-2-2.036V5.036C4 3.91 4.895 3 6 3h8c1.105 0 2 .911 2 2.036v1.866m-6 .17h8c1.105 0 2 .91 2 2.035v10.857C20 21.09 19.105 22 18 22h-8c-1.105 0-2-.911-2-2.036V9.107c0-1.124.895-2.036 2-2.036z"></path>
    </svg></div>
</div>
`;

exports[`Snippet should support no copy 1`] = `
<div class="fect-snippet default disabled"><span><span>$</span>inTest</span>
  <!---->
</div>
`;
